syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.nedellis.kotlinraft";
option java_outer_classname = "RaftProto";

package kotlinraft;

service Raft {
  rpc RequestVote (RequestVoteRequest) returns (RequestVoteResponse) {}
  rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse) {}
}

message RequestVoteRequest {
  int32 term = 1;
  int32 candidateID = 2;
  int32 lastLogIndex = 3;
  int32 lastLogTerm = 4;
}

message RequestVoteResponse {
  int32 term = 1;
  bool voteGranted = 2;
}

message AppendEntriesRequest {
  int32 term = 1;
  int32 leaderID = 2;
  int32 prevLogIndex = 3;
  int32 prevLogTerm = 4;
  repeated string entries = 5;
  int32 leaderCommit = 6;
}

message AppendEntriesResponse {
  int32 term = 1;
  bool success = 2;
}
